--- a/public/app/css/main.css
+++ b/public/app/css/main.css
@@ -183,9 +183,27 @@ body {
 
 .overview{
   width : 100%;
-  height : 50px;
   margin: auto;
   text-align: center;
+}
+
+h1{
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+
+h2{
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+h3{
+  margin-top: 1px;
+  margin-bottom: 5px;
+}
+
+p{
+  margin-bottom: 5px;
 }
 
 .menuButton{
@@ -195,6 +213,7 @@ body {
   background-color: var(--buttonColor);
   margin-top: 5px;
   text-align: center;
+  margin-bottom: 5px;
 }
 
 .menuButton:hover{
@@ -210,7 +229,7 @@ body {
 .codeExample{
   background-color: var(--codeBoxBackground);
   width : 100%;
-  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 footer{
