setting up section injection

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="./app/css/main.css">
+        <link rel="stylesheet" href="./template/css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
@@ -8,19 +8,17 @@
             <div id="titleFrame">
                 <div id="titleBar">
                         <p>OpenFin Support - API Examples</p>
-                        <img class="titleBarMinimize" onclick="minimiseWindow()" src="./app/shared/images/minimize.svg" alt="">
-                        <img class="titleBarRestore" onclick="restoreWindow()" src="./app/shared/images/restore.svg" alt="">
-                        <img class="titleBarMaximize" onclick="maximiseWindow()" src="./app/shared/images/maximize.svg" alt="">
-                        <img class="titleBarClose" onclick="closeWindow()" src="./app/shared/images/close-x.svg" alt="">
+                        <img class="titleBarMinimize" onclick="minimiseWindow()" src="./template/shared/images/minimize.svg" alt="">
+                        <img class="titleBarRestore" onclick="restoreWindow()" src="./template/shared/images/restore.svg" alt="">
+                        <img class="titleBarMaximize" onclick="maximiseWindow()" src="./template/shared/images/maximize.svg" alt="">
+                        <img class="titleBarClose" onclick="closeWindow()" src="./template/shared/images/close-x.svg" alt="">
                 </div>
             </div>
         </header>
         <main>
             <div class="content">
-
                 <div id="sections-container">
-
-                </div>
+                </div>   
             </div>
         </main>
         <footer>
@@ -31,9 +29,9 @@
                     show developer tools
                 </p>
         </footer>
-        <script src="./app/scripts/contentBuilder.js"></script>
-        <script src="./app/scripts/content.js"></script>
-        <script src="./app/scripts/main.js"></script>
+        <script src="./template/scripts/contentBuilder.js"></script>
+        <script src="./template/scripts/content.js"></script>
+        <script src="./template/scripts/main.js"></script>
         <script src="./examples/examples.js"></script>
     </body>
 </html>
